--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "celebrate": "^13.0.3",
     "date-fns": "^2.15.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.7",
+    "@types/hapi__joi": "^17.1.6",
     "@types/jest": "^26.0.13",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.27",
