--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/redis": "^2.8.27",
     "aws-sdk": "^2.771.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.3",
@@ -27,6 +28,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "pg": "^8.3.2",
+    "rate-limiter-flexible": "^2.1.10",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.60",
     "tsyringe": "^4.3.0",
